Resources/Public/CSS/styles.css
/* ... */
/* User setting area */
.user-profile-container {
    width: 500px;
    margin: 0 auto;
    padding: 1rem;
    background-color: white;
    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
    border-radius: 0;
}

.user-profile-container #sfrForm .form-row .col-md-6 {
    width: 100% !important;
}

.user-profile-container .btn-primary {
    background-color: #5c636a !important;
    border-color: #5c636a !important;
}


/* status */
.status-bar {
    border-bottom: 1px solid #FFF;
    padding: 10px 0px;
    display: flex;
    align-items: flex-start;
}

.status-bar .breadcrumb-item::before {
    display: none !important;
}

.status-bar .breadcrumb-item:not(:last-child)::after {
    margin: 0 .5rem;
    color: var(--bs-breadcrumb-divider-color, #6c757d);
}

.status-bar .breadcrumb-item {
    white-space: nowrap;
    border: 1px solid #6c757d;
    font-size: 0.75em;
    border-radius: 50rem;
    padding: 0.35em 0.8em;
    margin-right: 0.5rem;
    margin-bottom: 0.5rem;
}

.editor-label {
    color: #6c757d !important;
}

.state-badge {
    display: inline-block;
    padding: 0.35em 0.8em;
    font-size: 0.75em;
    font-weight: 700;
    line-height: 1.5;
    text-align: center;
    white-space: nowrap;
    vertical-align: baseline;
    border-radius: 50rem;
    text-decoration: none;
    margin-right: 0.5rem;
}

.badge-done {
    background-color: #fff;
    color: #198754;
    border: 1px solid #198754;
}

.badge-active {
    background-color: #0d6efd;
    color: #fff;
    border: 1px solid #0d6efd;
}

.badge-inactive {
    background-color: #fff;
    color: #adb5bd;
    border: 1px solid #dee2e6;
}

/* Metadata form */

#nav-tabContent {
    background: white;
    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
    padding: 1.5rem;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
    color: #000;
    border-color: #fff;
}

.nav-link {
    color: #000000;
}

.nav-link:focus,
.nav-link:hover {
    color: #6c757d;
}


button.tab-error::after {
    content: "";
    display: inline-block;
    width: 8px;
    height: 8px;
    background-color: red;
    border-radius: 50%;
    margin-left: 6px;
}

.form-error {
    border: 1px solid red;
}

.carousel-image {
    object-fit: cover;
    width: 100%;
}

ul.facets {
    list-style: none;
    padding-left: 0;
}

ul.facets li a {
    text-decoration: none;
    color: #000;
}

ul.facets li a:hover {
    text-decoration: underline;
    color: #0a53be;
}

.pagination .page-item .page-link {
    color: #000 !important;
}

.pagination .page-item.active .page-link {
    background-color: var(--color-btn-primary);
    border-color: var(--color-btn-primary);
    color: white !important;
}

.pagination .page-item .page-link:hover {
    background-color: #6c757d;
    border-color: #6c757d;
    color: white !important;
}


.processForm .edit-submit-btn {
    margin-bottom: 10px;
}


@media (max-width: 1076px) {
    #crowdsourcing .info-box-wrapper .col-md-4 {
        width: 33%;
    }
}

@media (max-width: 991px) {
    #crowdsourcing .info-box-wrapper {
        max-width: 100%;
    }

    .main-nav .gap-4 {
        gap: 1.5rem !important;
    }
}


@media (min-width: 768px) {
    #sfrForm .col-md-6 {
        flex: 0 0 auto;
        width: 100%;
    }
}

@media (max-width: 768px) {
    .user-profile-container {
        max-width: 100%;
    }

    #crowdsourcing .dashboard-info .multi-column {
        column-count: 1;
        column-gap: 0px;
    }
}

@media (max-width: 540px) {
    #crowdsourcing .info-box-wrapper .col-md-4 {
        width: 50%;
    }
}

@media (max-width: 320px) {
    #crowdsourcing .info-box-wrapper .col-md-4 {
        width: 100%;
    }
}

